python-apt (0.7.3) unstable; urgency=low

  * python/package.py:
    - added Record class that can be accessed like a dictionary
      and return it in candidateRecord and installedRecord
      (thanks to Alexander Sack for discussing this with me)
  * doc/examples/records.py:
    - added example how to use the new Records class

 --

python-apt (0.7.2) unstable; urgency=low

  * build against the new apt
  * support for new "aptsources" pythn module
    (thanks to Sebastian Heinlein) 
  * merged support for translated package descriptions
  * merged support for automatic removal of unused dependencies

 -- Michael Vogt <mvo@debian.org>  Sun, 10 Jun 2007 20:13:38 +0200

python-apt (0.7.1) experimental; urgency=low

  * merged http://glatzor.de/bzr/python-apt/sebi:
    - this means that the new aptsources modules is available

 -- Michael Vogt <mvo@debian.org>  Mon, 14 May 2007 13:33:42 +0200

python-apt (0.7.0) experimental; urgency=low

  * support translated pacakge descriptions
  * support automatic dependency information

 -- Michael Vogt <mvo@debian.org>  Wed,  2 May 2007 18:41:53 +0200

python-apt (0.6.22) unstable; urgency=low

  * python/apt_pkgmodule.cc:
    - added pkgCache::State::PkgCurrentState enums
  * python/pkgrecords.cc:
    - added SourceVer

 -- Michael Vogt <mvo@debian.org>  Wed, 23 May 2007 09:44:03 +0200

python-apt (0.6.21) unstable; urgency=low

  * apt/cdrom.py:
    - better cdrom handling support
  * apt/package.py:
    - added candidateDependencies, installedDependencies
    - SizeToString supports PyLong too 
    - support pkg.architecture
    - support candidateRecord, installedRecord
  * apt/cache.py:
    - fix rootdir
  * apt/cdrom.py:
    - fix bug in cdrom mountpoint handling

 -- Michael Vogt <mvo@debian.org>  Tue, 24 Apr 2007 21:24:28 +0200

python-apt (0.6.20) unstable; urgency=low

  * python/generic.h:
    - fix incorrect use of PyMem_DEL(), use pyObject_DEL()
      instead. This fixes a nasty segfault with python2.5